# intel_slice_by_8

./: CMakeLists.txt  intel_slice_by_8.code-workspace  slice_by_8.code-workspace
.github/workflows/: windows.yml
src/: 8x256_tables.c  CMakeLists.txt  crc.c
src/slice_by_8/: crc.h
